--- a/audio.html
+++ b/audio.html
@@ -9,7 +9,7 @@
     <img src="../iframes task/Dwaraka music.jpg" width="300"><br>
     <b><P>1.Entha Chithram kadha Song</P></b>
      <audio controls autoplay>
-    <source src="../Entha Chitram Kada.mp3">
+    <source src="audio.mp3">
      </audio><br>
      <button>
         <a href="../Entha Chitram Kada.mp3">Download</a>
@@ -17,7 +17,7 @@
 
      <b><P>2.Bhajare Nanda Gopala Song</P></b>
      <audio controls autoplay>
-    <source src="../Bhajare Nanda Gopala.mp3">
+    <source src="Bhajare Nanda Gopala.mp3">
     </audio><br>
      <button>
         <a href="../Bhajare Nanda Gopala.mp3">Download</a>
@@ -25,7 +25,7 @@
 
      <b><P>2.Janthar manthar Song</P></b>
      <audio controls autoplay>
-    <source src="../Janthar Manthar.mp3">
+    <source src="Janthar Manthar.mp3">
      </audio><br>
      <button>
         <a href="../Janthar Manthar.mp3">Download</a>
