--- a/audio.html
+++ b/audio.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="../iframes task/Dwaraka music.jpg" width="300"><br>
+    <img src="Dwaraka music.jpg" width="300"><br>
     <b><P>1.Entha Chithram kadha Song</P></b>
      <audio controls autoplay>
     <source src="audio.mp3">
      </audio><br>
      <button>
-        <a href="../Entha Chitram Kada.mp3">Download</a>
+        <a href="audio.mp3">Download</a>
      </button>
 
      <b><P>2.Bhajare Nanda Gopala Song</P></b>
