--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@
                     episode 1
                 </summary>
                 <video controls autoplay width="300">
-                    <source src="../Full【ENG SUB 】My Girlfriend is an Alien EP1 ——Starring_ Wan Peng, Hsu Thassapak, Wang You Jun.mp4">
+                    <source src="video.mp4">
                 </video>
             </details>
     
