--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@
                     episode 1
                 </summary>
                 <video controls autoplay width="300">
-                    <source src="video.mp4">
+                    <source src="episode 1.mp4">
                 </video>
             </details>
     
